--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mantriq - Leading CNC Parts Supplier in Toronto</title>
 
-    <meta name="description" content="Leading Toronto suppliers of high quality precision CNC turned & milled components"/>
+    <meta name="description" content=""/>
     <meta name="keywords" content="CNC parts Toronto, precision machining, turned components, milled parts"/>
 
     <meta property="og:title" content="Mantriq">
