--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="CNC parts Toronto, precision machining, turned components, milled parts"/>
 
     <meta property="og:title" content="Mantriq">
-    <meta property="og:description" content="Leading Toronto suppliers of high quality precision CNC turned & milled components">
+    <meta property="og:description" content="">
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚙️</text></svg>">
