Remove unused vendor directories and use CDN links

--- a/pages/quality.html
+++ b/pages/quality.html
@@ -52,16 +52,16 @@
 
 
   <!-- can remove if you dont need, for using icons -->
-<link href="../../stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="../css/slick.css" rel="stylesheet">
 <link href="../css/slick-theme.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;display=swap" rel="stylesheet">
 <link href="../css/northerncam-v2.4.css" rel="stylesheet">
 
 </script>
-<script src="../../www.google.com/recaptcha/api.js"></script>
+<script src="https://www.google.com/recaptcha/api.js"></script>
 
-<script type="text/javascript" src="../../platform-api.sharethis.com/js/sharethis.js#property=596a008a31b8b90012c6a95a&product=inline-share-buttons" defer></script>
+<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=596a008a31b8b90012c6a95a&product=inline-share-buttons" defer></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157917930-1"></script>
 <script>
@@ -382,7 +382,7 @@ function onSubmit(token) {
 		<a href="http://www.primecreative.com/" target="_blank">Design and Built by Prime Creative</a>
 	</section>
 </footer>
-	<script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-main="https://www.northerncam.co.uk/js/main_default.js" src="../js/require.js" defer></script>
+	<script data-cfasync="false" src="https://www.northerncam.co.uk/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-main="https://www.northerncam.co.uk/js/main_default.js" src="../js/require.js" defer></script>
  <!--[if lt IE 9]>
     <script src="http://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="http://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -478,11 +478,11 @@ function onSubmit(token) {
             </div>
         </div>
 <!--<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>-->
-<script src="../../code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-<script src="../../cdn.jsdelivr.net/npm/gsap%403.12.5/dist/gsap.min.js"></script>
-<script src="../../cdn.jsdelivr.net/npm/gsap%403.12.5/dist/ScrollTrigger.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 
-<script src="../../unpkg.com/isotope-layout%403.0.6/dist/isotope.pkgd.js"></script>
+<script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.js"></script>
 <script src="../js/yall.min.js"></script>
 
 <script src="../js/northerncam-v1.2f9e3.js?v=1.1"></script>
