--- a/pages/contact.html
+++ b/pages/contact.html
@@ -51,7 +51,7 @@
 
 
 
-  <!-- can remove if you dont need, for using icons -->
+  <!-- Remove this link if icon fonts are not needed -->
 <link href="../../stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="../css/slick.css" rel="stylesheet">
 <link href="../css/slick-theme.css" rel="stylesheet">
