Move validationEngine css to css directory and update references

--- a/pages/privacy-and-cookies.html
+++ b/pages/privacy-and-cookies.html
@@ -317,7 +317,7 @@ function onSubmit(token) {
     <script src="http://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-		    <link rel="stylesheet" type="text/css" href="../js/validationEngine.jquery.css">
+		    <link rel="stylesheet" type="text/css" href="../css/validationEngine.jquery.css">
 		    <link rel="stylesheet" type="text/css" href="../js/plugins/fancyBox/source/jquery.fancybox-front.css">
 
 
